--- a/config/mimas.conf
+++ b/config/mimas.conf
@@ -1,1 +1,5 @@
-CONFIG_ZMK_USB_LOGGING=n
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERAL=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_MATRIX_SCAN_DURATION=10
