--- a/config/mimas.conf
+++ b/config/mimas.conf
@@ -1,5 +1,14 @@
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERAL=y
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_MAX_CONN=2
 CONFIG_ZMK_BLE=y
 CONFIG_ZMK_MATRIX_SCAN_DURATION=10
+
+# Optimize Bluetooth
+CONFIG_BT_FAST_ADV=y
+CONFIG_BT_LIM_ADV_TIMEOUT=30
+CONFIG_BT_DISC_ADV_TIMEOUT=30
+
+# Improve power efficiency
+CONFIG_BT_CTLR_TX_PWR_PLUS_3=y
+CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_PERIPHERAL=n
