--- a/build.yaml
+++ b/build.yaml
@@ -3,4 +3,5 @@ include:
     shield: mimas_left
   - board: nice_nano_v2
     shield: mimas_right
-# there is no settingsreset (needed) for the XIAO
+  - board: nice_nano_v2
+    shield: settings_reset
