--- a/build.yaml
+++ b/build.yaml
@@ -6,4 +6,4 @@ include:
   - board: nice_nano_v2
     shield: settings_reset
   - board: seeeduino_xiao_ble
-    shield: totem_dongle prospector_adapter
+    shield: mimas_dongle prospector_adapter
