--- a/build.yaml
+++ b/build.yaml
@@ -7,3 +7,4 @@ include:
     shield: settings_reset
   - board: seeeduino_xiao_ble
     shield: mimas_dongle prospector_adapter
+    kconfig: mimas_dongle.conf
