--- a/build.yaml
+++ b/build.yaml
@@ -7,3 +7,5 @@ include:
     shield: settings_reset
   - board: seeeduino_xiao_ble
     shield: mimas_dongle prospector_adapter
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
