--- a/build.yaml
+++ b/build.yaml
@@ -1,11 +1,9 @@
 include:
   - board: nice_nano_v2
     shield: mimas_left
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   - board: nice_nano_v2
     shield: mimas_right
-  - board: nice_nano_v2
-    shield: settings_reset
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   - board: seeeduino_xiao_ble
     shield: mimas_dongle prospector_adapter
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
